<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>tech.artcoded</groupId>
  <artifactId>artcoded-parent</artifactId>
  <version>2022.4.1-SNAPSHOT</version>

  <name>ARTCODED - ROOT</name>

  <packaging>pom</packaging>

  <developers>
    <developer>
      <name>Nordine Bittich</name>
      <email>contact@bittich.be</email>
      <organization>ARTCODED</organization>
      <organizationUrl>https://bittich.be</organizationUrl>
      <url>https://github.com/openartcoded/backend</url>
      <roles>
        <role>Developer</role>
      </roles>
    </developer>
  </developers>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <poi.version>5.2.2</poi.version>
    <java.version>18</java.version>
    <log4j2.version>2.18.0</log4j2.version>
    <lombok.version>1.18.24</lombok.version>
    <spring.boot.starter.version>2.7.4</spring.boot.starter.version>
    <json-path.version>2.7.0</json-path.version>
    <commons-lang3.version>3.12.0</commons-lang3.version>
    <commons-text.version>1.9</commons-text.version>
    <caffeine.version>2.9.3</caffeine.version>
    <commons-io.version>2.11.0</commons-io.version>
    <javax.inject.version>1</javax.inject.version>
    <jena-core.version>4.6.0</jena-core.version>
    <camel.version>3.18.1</camel.version>
    <commonmark.version>0.19.0</commonmark.version>
    <zt-exec.version>1.12</zt-exec.version>
    <zip4j.version>2.11.1</zip4j.version>
    <thumbnailator.version>0.4.17</thumbnailator.version>
    <java-wkhtmltopdf-wrapper.version>1.1.13-RELEASE</java-wkhtmltopdf-wrapper.version>
    <mongock.version>5.0.39</mongock.version>
    <micrometer-registry-prometheus.version>1.9.3</micrometer-registry-prometheus.version>
    <jakarta.mail.version>1.6.7</jakarta.mail.version>
    <greenmail.version>1.6.8</greenmail.version>
    <commons-compress.version>1.20</commons-compress.version>
  </properties>

  <scm>
    <connection>
      scm:git:git@github.com:openartcoded/backend.git
    </connection>
    <tag>HEAD</tag>
  </scm>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-compress</artifactId>
        <version>${commons-compress.version}</version>
      </dependency>
      <dependency>
        <groupId>com.sun.mail</groupId>
        <artifactId>jakarta.mail</artifactId>
        <version>${jakarta.mail.version}</version>
      </dependency>
      <dependency>
        <groupId>com.icegreen</groupId>
        <artifactId>greenmail-junit5</artifactId>
        <version>${greenmail.version}</version>
      </dependency>

      <dependency>
        <groupId>tech.artcoded</groupId>
        <artifactId>event</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.micrometer</groupId>
        <artifactId>micrometer-registry-prometheus</artifactId>
        <version>${micrometer-registry-prometheus.version}</version>
      </dependency>
      <dependency>
        <groupId>io.mongock</groupId>
        <artifactId>mongock-bom</artifactId>
        <version>${mongock.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-api</artifactId>
        <version>${log4j2.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi</artifactId>
        <version>${poi.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.poi</groupId>
        <artifactId>poi-ooxml</artifactId>
        <version>${poi.version}</version>
      </dependency>
      <dependency>
        <groupId>net.lingala.zip4j</groupId>
        <artifactId>zip4j</artifactId>
        <version>${zip4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.zeroturnaround</groupId>
        <artifactId>zt-exec</artifactId>
        <version>${zt-exec.version}</version>
      </dependency>
      <dependency>
        <groupId>org.commonmark</groupId>
        <artifactId>commonmark</artifactId>
        <version>${commonmark.version}</version>
      </dependency>
      <dependency>
        <groupId>net.coobird</groupId>
        <artifactId>thumbnailator</artifactId>
        <version>${thumbnailator.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel.springboot</groupId>
        <artifactId>camel-spring-boot-starter</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-jackson</artifactId>
        <version>${camel.version}</version>
        <exclusions>
          <exclusion>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-mail</artifactId>
        <version>${camel.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.camel</groupId>
        <artifactId>camel-jms</artifactId>
        <version>${camel.version}</version>
      </dependency>

      <dependency>
        <groupId>com.github.jhonnymertz</groupId>
        <artifactId>java-wkhtmltopdf-wrapper</artifactId>
        <version>${java-wkhtmltopdf-wrapper.version}</version>
      </dependency>
      <dependency>
        <groupId>com.jayway.jsonpath</groupId>
        <artifactId>json-path</artifactId>
        <version>${json-path.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring.boot.starter.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.projectlombok</groupId>
        <artifactId>lombok</artifactId>
        <version>${lombok.version}</version>
        <scope>provided</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>${commons-lang3.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-text</artifactId>
        <version>${commons-text.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-core</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-arq</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-rdfconnection</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.jena</groupId>
        <artifactId>jena-shacl</artifactId>
        <version>${jena-core.version}</version>
      </dependency>
      <dependency>
        <groupId>com.github.ben-manes.caffeine</groupId>
        <artifactId>caffeine</artifactId>
        <version>${caffeine.version}</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>${commons-io.version}</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>${javax.inject.version}</version>
      </dependency>

    </dependencies>
  </dependencyManagement>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <release>${java.version}</release>
            <source>${java.version}</source>
            <target>${java.version}</target>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.starter.version}</version>
          <executions>
            <execution>
              <id>build-info</id>
              <goals>
                <goal>build-info</goal>
              </goals>
              <configuration>
                <additionalProperties>
                  <encoding.source>UTF-8</encoding.source>
                  <encoding.reporting>UTF-8</encoding.reporting>
                  <java.source>${java.version}</java.source>
                </additionalProperties>
              </configuration>
            </execution>
            <execution>
              <id>executable</id>
              <goals>
                <goal>repackage</goal>
              </goals>
              <configuration>
                <executable>true</executable>
              </configuration>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
  <modules>
    <module>event</module>
    <module>artcoded</module>
  </modules>
</project>
